assets/css/style.css
/* ... */
/* mobile devices */

@media (max-width: 767px) and (min-width: 576px) {
  .navbar-collapse .navbar-nav .menu-item {
    background: white;
  }

  .navbar-collapse .navbar-nav .menu-item a {
    font-size: 2em;
    text-transform: uppercase;
  }

  .navbar-collapse .navbar-nav .menu-item a:hover {
    font-size: 2em;
    text-transform: uppercase;
    text-decoration: none;
    text-shadow: none;
    color: var(--url-hover-color) !important;
  }

  .logo-nav {
    margin-left: 10px;
  }

  .cover-image {
    position: relative;
    height: 200px;
  }

  .text-main {
    top: 65px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .page-row {
    margin-top: 0;
    max-width: 100vw;
  }

  .headerurl,
  .nav-link {
    text-shadow: none;
  }

  .nav-link {
    text-align: center;
  }

  .posthead-image {
    top: 0;
    min-height: 300px;
    height: auto;
    width: 100%;
  }

  .post-image {
    height: auto;
    width: 100%;
  }

  h1 {
    font-size: 120%;
  }

  .content-images,
  .content-images-individual {
    object-fit: cover;
  }

  .container-fluid {
    margin-left: auto;
    margin-right: auto;
  }

  .row-post {
    margin-top: -15px;
  }

  .tag_heading > .posttitle.posttitle-author {
    font-size: 180% !important;
  }

  .main-content {
    margin-top: 30px;
  }

  .avatar-page-author {
    margin-top: 10px;
  }

  iframe {
    padding: 25px;
  }

  .kg-image-card.kg-width-wide,
  .kg-image-card.kg-width-full {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

@media (max-width: 991px) and (min-width: 768px) {

  .tag_heading > .posttitle.posttitle-author {
    font-size: 180% !important;
  }

  .cover-image {
    top: -155px;
    position: relative;
    height: 320px;
  }

  .text-main {
    top: 65px;
  }

  .card-text {
    height: auto;
  }

  .page-row {
    margin-top: 0;
  }

  .headerurl,
  .nav-link {
    text-shadow: none;
  }

  .navbar {
    margin-bottom: 0;
  }

  .navbar-brand {
    color: white !important;
  }

  .navbar-brand:hover {
    color: white;
  }

  .posthead-image {
    top: 0;
    min-height: 300px;
    height: auto;
    width: 100%;
  }

  .post-image {
    height: auto;
    width: 100%;
  }

  h1 {
    font-size: 120%;
  }

  .content-images,
  .content-images-individual {
    object-fit: cover;
  }

  .container-fluid {
    margin-left: auto;
    margin-right: auto;
  }

  .row-post {
    margin-top: -15px;
  }

  .main-content {
    margin-top: 30px;
  }

  .avatar-page-author {
    margin-top: 10px;
  }

  .kg-image-card.kg-width-wide,
  .kg-image-card.kg-width-full {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
}

/* tablet devices */
@media only screen and (min-width: 992px) {
  .card-title {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

/* **************************************

  ERROR PAGE

*****************************************/
.error {
  background-color: orangered;
}

.row.page-row.error-row {
  margin-bottom: 20px;
}

.card-actions-bottom {
  display: block;
  text-align: center;
  margin-bottom: 30px;
}

.fa-exclamation-triangle {
  margin-bottom: 50px;
}

.fa-circle {
  margin-left: 15px;
  margin-right: 15px;
  color: #ebebeb;
}

/* **************************************

  HANDY CLASSES

*****************************************/

.flex-center-align {
	display: flex;
	align-items: center;
	justify-content: center;
}


/* **************************************

EXTERNAL libraries look-n-feel

*****************************************/
.post-options-url .fa-play {
	margin-right: 5px;
}

.fa-user-secret,
.fa-tag {
  color: #b5b5b5;
  margin-left: 20px;
  margin-right: 20px;
}

.fa-facebook-square {
  color: #3b5998;
}

.fa-facebook-square:hover,
footer div a .fa-facebook-square:hover {
  color: #3b5998 !important;
}

.fa-twitter-square:hover,
footer div a .fa-twitter-square:hover {
  color: #1dcaff !important;
}

.fa-rss-square {
  color: #f26522;
}

.fa-rss-square:hover,
footer div a .fa-rss-square:hover {
  color: #f26522 !important;
}

.fa-twitter,
.fa-twitter-square,
.fa-rss-square,
.fa-facebook-square{
  margin-right: 10px;
}

.fa-twitter-author,
.fa-facebook-author {
  color: black;
  background: white;
  border-radius: 15px;
}

.fa-tag {
  margin-right: 8px;
}

.fa-calendar {
  margin-left: 20px;
}

.fa-clock,
.fa-user,
.fa-book {
  color: black;
}

.fa-bars {
  color: black;
}

i.fas.fa-exclamation-circle.fa-2x {
  margin-right: 10px;
}

.postdate i {
  margin-right: 5px;
}

.postdate > a i {
  border-radius: 10px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 3px;
  margin-top: 3px;
}

/* add some styling to disqus */
#disqus_thread {
  padding-left: 40px;
  padding-right: 40px;
}

